Commit 12 en clase

--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/index.html
@@ -27,9 +27,9 @@
 
 <div class="w30">
     <h2>Michael Jordan</h2>
-    <h4>Medallista Olímpico</h4>
+    <h4><span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span> <span>Medallista Olímpicos</span> <span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span></h4>
 
-    <div><img src="Michael_Jordan_in_2014.jpeg" alt=""></div>
+    <div class="imagenJordan"><img src="Michael_Jordan_in_2014.jpeg" alt=""></div>
    
     <h5 class="w40">Jordan en 2014</h5>
 
@@ -62,6 +62,63 @@
 
     <h4 class="carreraDeportiva">Carrera deportiva</h4>
     
+    <div class="columnas">
+        <div class="x10">Deporte</div>
+        <div class="x20"><a href="#">Baloncesto</a></div>
+    </div>
+    <div class="columnas">
+        <div class="x10">Equipo universitario</div>
+        <div class="x20"><a href="#">North Carolina</a><br>(1981-1984)</div>
+    </div>
+    <div class="columnas">
+        <div class="x10">Estado</div>
+        <div class="x20">Retirado</div>
+    </div>
+
+    <h4 class="clubProfesional">Club profesional</h4> 
+
+    <div class="columnas">
+        <div class="x10"><a href="#">Draft de la NBA</a></div>
+        <div class="x20">1ª ronda (puesto 3), <a href="#">1984</a> por <a href="#">Chicago Bulls</a></div>
+    </div>
+    <div class="columnas">
+        <div class="x10">Liga</div>
+        <div class="x20"><a href="#">NBA</a></div>
+    </div>
+    <div class="columnas">
+        <div class="x10">Posición</div>
+        <div class="x20"><a href="#">Escolta</a></div>
+    </div>
+    <div class="columnas">
+        <div class="x10"><a href="#">Dorsal(es)</a></div>
+        <div class="x10">23, 45, 12</div>
+    </div>
+
+    <h4 class="seleccionNacional">Selección Nacional</h4> 
+
+    <div class="columnas">
+        <div class="x10">Selección</div>
+        <div class="x20"><a href="#">Estados Unidos</a></div>
+    </div>
+    <div class="columnas">
+        <div class="x10"><a href="#">Dorsal(es)</a></div>
+        <div class="x10">9</div>
+    </div>
+    <div class="columnas">
+        <div class="x10">Partidos</div>
+        <div class="x10">47</div>
+    </div>
+
+    <h4 class="trayectoria">Trayectoria</h4>
+    
+    <div class="columnas">
+        <ul>
+            <li>
+                <div><a href="#">Chicago Bulls </a>(<a href="#">1984</a> - <a href="#">1993</a>, <a href="#">1995</a> - <a href="#">1998</a>)</div>
+            </li>
+        </ul>
+    </div>
+
 </div>
 
 <div class="lista">
