--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Wikipedia/index.html
@@ -15,7 +15,7 @@
 <div id="contenedorPadre">
     <div class="w20">
     <p class="p1">
-        Michael Jeffrey Jordan (<a href="#">Nueva York; 17 de febrero</a> de 1963) es un exjugador de <a href="#">baloncesto estadounidense</a>. Con 1,98 metros de altura, jugaba en la posición de escolta. Es considerado por la mayoría de aficionados y especialistas como el mejor jugador de baloncesto de todos los tiempos. Se retiró definitivamente en 2003 en los Washington Wizards, tras haberlo hecho en dos ocasiones anteriores, en 1993 y 1999, después de haber jugado 13 temporadas en los <a href="#">Chicago Bulls</a>.
+       <span style="font-weight: bold">Michael Jeffrey Jordan</span>  (<a href="#">Nueva York; 17 de febrero</a> de 1963) es un exjugador de <a href="#">baloncesto estadounidense</a>. Con 1,98 metros de altura, jugaba en la posición de escolta. Es considerado por la mayoría de aficionados y especialistas como el mejor jugador de baloncesto de todos los tiempos. Se retiró definitivamente en 2003 en los Washington Wizards, tras haberlo hecho en dos ocasiones anteriores, en 1993 y 1999, después de haber jugado 13 temporadas en los <a href="#">Chicago Bulls</a>.
     </p>
     <p class="p2">
         Ganó 6 anillos con <a href="#">Chicago Bulls</a>, promediando 30,1 puntos por partido en toda su carrera deportiva, el mayor promedio en la historia de la liga. También ganó 10 <a href="#">títulos de máximo anotador</a>, 5 <a href="#">MVP de la temporada</a>, 6 <a href="#">MVP de las Finales</a>; fue nombrado en el <a href="#">mejor quinteto de la NBA</a> en diez ocasiones, en el defensivo nueve veces, líder en robos de balón durante tres años y un premio al <a href="#">mejor defensor de la temporada.</a>
@@ -26,12 +26,12 @@
 </div>
 
 <div class="w30">
-    <h2>Michael Jordan</h2>
-    <h4><span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span> <span>Medallista Olímpicos</span> <span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span></h4>
+    <h2><span class="resaltado2">Michael Jordan</span></h2>
+    <h4><span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span> <span class="resaltado3">Medallista Olímpicos</span> <span class="olimpiadas"><img src="Olympic_rings_without_rims.svg.png" alt=""></span></h4>
 
     <div class="imagenJordan"><img src="Michael_Jordan_in_2014.jpeg" alt=""></div>
    
-    <h5 class="w40">Jordan en 2014</h5>
+    <h5 class="w40">Jordan en 2014.</h5>
 
     <h4 class="DatosPersonales">Datos personales</h4>
 
@@ -111,18 +111,29 @@
 
     <h4 class="trayectoria">Trayectoria</h4>
     
-    <div class="columnas">
+    <div class="lista2">
         <ul>
             <li>
                 <div><a href="#">Chicago Bulls </a>(<a href="#">1984</a> - <a href="#">1993</a>, <a href="#">1995</a> - <a href="#">1998</a>)</div>
             </li>
         </ul>
     </div>
+    <div class="lista2">
+        <ul>
+            <li>
+                <div><a href="#">Washington Wizards</a>(<a href="#">2001</a> - <a href="#">2003</a>)</div>
+            </li>
+        </ul>
+    </div>
+
+    <h4 class="medallero"><span class="resaltado">Medallero</span> <a class="mostrar" href="#">[mostrar]</a></h4> 
+
+    <h4 class="titulos"><span class="resaltado">Títulos</span> <a class="mostrar" href="#">[mostrar]</a></h4>
 
 </div>
 
 <div class="lista">
-    <h3 class="indice">Índice [<a href="#">ocultar</a>]</h3>
+    <h3 class="indice"><span class="resaltado">Índice</span> [<a href="#">ocultar</a>]</h3>
     <ol class="primer-nivel"> 
             <li>
                 1<a href="#"> Comienzos</a>
