--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/index.html
@@ -27,22 +27,99 @@
 	
 	<div id="cajaExterior">
 		<div class="caja">
+
 			<div class="card">
+
 				<div class="img1"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
 			</div>
+
 			
 		</div>
 
-		<div class="caja">
-			<div class="card"></div>
+		<div class="caja2">
+			<div class="card">
+
+				<div class="img2"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
+			</div>
 		</div>
 	
 		<div class="caja">
-			<div class="card"></div>
+			<div class="card">
+
+				<div class="img3"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
+			</div>
 		</div>
 	</div>
 
-</div>	
+</div>
+
+<div id="fondoGris">
+
+	<div id="cajaExterior-2">
+		<div class="caja-2">
+
+			<div class="card">
+
+				<div class="img1"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
+			</div>
+
+		
+		</div>
+
+		<div class="caja-2">
+			<div class="card">
+
+				<div class="img2"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="caja-2">
+			<div class="card">
+
+				<div class="img3"></div>	
+
+				<div class="parrafo">
+					<h3>App bars: bottom</h3>
+					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div id="fondoGrisOscuro"></div>
 
 </body>
 </html>
