--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P7. Solucion_Posicionamientos_v2/index.html
@@ -87,7 +87,6 @@
 
 			</div>
 
-		
 		</div>
 
 		<div class="caja-2">
@@ -99,8 +98,20 @@
 					<h3>App bars: bottom</h3>
 					<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
 				</div>
-
 			</div>
+
+			<div class="caja-2-1">
+				<div class="card">
+	
+					<div class="img2"></div>	
+	
+					<div class="parrafo">
+						<h3>App bars: bottom</h3>
+						<p>A bottom app bar displays navigation and key actions at the bottom of mobile screens</p>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 		<div class="caja-2">
