--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600;700&family=Roboto&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+
+
 </head>
+
 <body>
     <div id="degradado">
         <nav>
@@ -22,8 +31,106 @@
             </div>
         </nav>
 
+        <div id="primerElemento"></div>
+
+    </div>
+    
+    <div id="segundoElemento">
+        <div class="columnas2">
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">
+                    sell</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">Showcase Your App</div>
+                    <div class="texto2">Showcase your app in style with this professional looking template.</div>
+                </div>
+
+            </div>
+
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">settings</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">Easy to Customize</div>
+                    <div class="texto2">Easily customize the text and replace the images to suit your own app.</div>
+                </div>
+            </div>
+
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">
+                        palette</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">Unlimited Colors</div>
+                    <div class="texto2">Easily change the colors in CSS that can go well with your branding.</div>
+                </div>
+            </div>
+
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">
+                        laptop_mac</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">Responsive, HTML5, CSS3</div>
+                    <div class="texto2">Our template is 100% responsive and built with modern standards.</div>
+                </div>
+            </div>
+
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">
+                        description</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">Designed to Convert</div>
+                    <div class="texto2">Designed to engage your user and increase your conversion.</div>
+                </div>
+            </div>
+
+            <div class="cajas">
+                <div class="w10">
+                    <span class="custom-icon material-symbols-outlined">
+                        all_inclusive</span>
+                </div>
+                <div class="w20">
+                    <div class="texto1">With no Boundaries</div>
+                    <div class="texto2">Use Bootstrap and PaperKit to add additional components.</div>
+                </div>
+            </div>
+
+            <div class="cajaBlanco"></div>
+            
+        </div>
     </div>
 
+    <div id="tercerElemento">
+        <div class="columnas3">
+            <div class="izquierda">
+                <div class="movil2"> <img src="movil2.jpeg" alt=""></div>
+            </div>
+
+            <div class="derecha">
+                <div class="t1">What is Awesome App?</div>
+
+                <div class="t2">Add a brief story about your app here, what purpose your app solves and why you think your user would want to have it on their device.</div>
+
+                <div class="t3">Re-establish the main use case of your app by listing them below. Make sure to place a relavent screenshot on the left.</div>
+
+                <div class="t4 t5">Amazing Design to Present Your App</div>
+
+                <div class="t4">Fully Responsive and Powered by Bootstrap & PaperKit</div>
+
+                <div class="t4">Very Easy to Customize and Setup</div>
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
 </html> 
