--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P8. Awesome App/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    
+    <a href="otro.html" > Coches</a>
     <div id="degradado">
         <nav>
             <div id="columnas">
@@ -36,17 +36,24 @@
         <div id="caja1">
             <div class="columna1">
                 <h1>Awesome App</h1>
+
                 <h1>App Lanfing Template</h1>
+
                 <p class="resaltadox">An awesome landing page template to showcase your app features, screenshots, pricing, user testimonials and download links.</p>
+
                 <p class="list"> <span class="custom-iconx material-symbols-outlined">
                     check_circle
                     </span> Amazing Designs to Present Your App</p>
+
                 <p class="list"> <span class="custom-iconx material-symbols-outlined">
                     check_circle
                     </span> Fully Responsive and Powered by Bootstrap & PaperKit</p>
+
                 <p class="list"> <span class="custom-iconx material-symbols-outlined">
                     check_circle
                     </span> Very Easy to Customize and Setup</p>
+
+                <div class="startExploring">START EXPLORING</div>
             </div>
             <div class="columna2">
                 <img src="movil.jpeg" alt="">
@@ -219,7 +226,60 @@
                 <div class="h7">Start Free Trial</div>
                 <div class="h8">BUY NOW</div>
             </div>
+
+            <div class="cajaBlanco2"></div>
         </div>
+        
+    </div>
+
+    <div id="sextoElemento">
+
+        <div class="teext1">What our customers are saying</div>
+
+        <div class="teext2">Real user testimonials are great way to attract new customers and increase their trust into using your app.<br>Replace the testimonials below with the ones for your own app.</div>
+
+        <div class="bloques3">
+            <div class="card">
+                <div class="uno">Awesome App is awesome and I can't imagine working on my projects without it. It has saved me countless hours of time and has increased my productivity.</div>
+                <div class="dos">
+                    <div class="foto"> <img src="persona1.jpeg" alt=""></div>
+                    <div class="drcha">
+                        <p class="si">Patrick Harry</p>
+                        <p class="no">CEO, Awesome Inc.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="uno">Awesome App is awesome and I can't imagine working on my projects without it. It has saved me countless hours of time and has increased my productivity.</div>
+                <div class="dos">
+                    <div class="foto"> <img src="persona2.jpeg" alt=""></div>
+                    <div class="drcha">
+                        <p class="si">Jeanne Lawson</p>
+                        <p class="no">Design, Awesome Inc</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="uno">Awesome App is awesome and I can't imagine working on my projects without it. It has saved me countless hours of time and has increased my productivity.</div>
+                <div class="dos">
+                    <div class="foto"> <img src="persona3.jpeg" alt=""></div>
+                    <div class="drcha">
+                        <p class="si">Robin Barnes</p>
+                        <p class="no">Developer, Awesome Inc</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+
+
+
     </div>
 
 
