--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/P10. Pixar/index.html
@@ -28,11 +28,47 @@
     <div class="menu">
 
         <div class="menu-style">FEATURE FILMS</div>
-        <div class="menu-style">SHORT FILMS</div>
-        <div class="menu-style">TECHNOLOGY</div>
-        <div class="menu-style">CAREER</div>
-        <div class="menu-style">EXTRAS</div>
-        <div class="menu-style">ABOUT</div>
+
+        <div class="menu-style si">SHORT FILMS
+            <div class="menu-container">
+                  <div class="pequeMenu">
+                    <div>THEATRICAL SHORTS</div>
+                    <div>DISNEY+</div>
+                    <div>SPARKSHORTS</div>
+                    <div>
+                        <a class="enlace" href="Página2/index2.html">CARS TOONS</a>
+                    </div>
+                    <div>TOY STORY TOONS</div>
+                    <div>HOME ENTERTAINMENT</div>
+                </div>
+            </div>
+          
+
+        </div>
+
+        <div class="menu-style">TECHNOLOGY
+            <!-- <div class="pequeMenu">
+                <h2></h2>
+            </div> -->
+        </div>
+
+        <div class="menu-style">CAREER
+            <!-- <div class="pequeMenu">
+                <h2></h2>
+            </div> -->
+        </div>
+
+        <div class="menu-style">EXTRAS
+            <!-- <div class="pequeMenu">
+                <h2></h2>
+            </div> -->
+        </div>
+
+        <div class="menu-style">ABOUT
+            <!-- <div class="pequeMenu">
+                <h2></h2>
+            </div> -->
+        </div>
 
     </div>
     
