--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Examen/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="imgg2">
-            <img src="img/gallery-item-3-548x690.jpeg" alt="">
+            <img class="fotele" src="img/gallery-item-3-548x690.jpeg" alt="">
         </div>
 
     </div>
@@ -163,11 +163,8 @@
 
             <div class="fila2">
                 <span class="linea tres">BREAKFASTS</span>
-                &nbsp; &nbsp;
                 <span class="linea tres">LUNCHES</span>
-                &nbsp; &nbsp;
                 <span class="linea tres">DINNERS</span>
-                &nbsp; &nbsp;
                 <span class="linea tres">DESSERTS</span>
             </div>
 
@@ -299,15 +296,11 @@
 
     <div class="booox">
 
-        <div class="espacioXIV">
-            <div class="negro2"></div>            
-        </div>
-
         <h2>Reservation</h2>
 
         <div class="nombre">
             <label for="Nombre"></label>
-            <input class="form-control estilou" 
+            <input class="form-control estilou estiloWidth" 
             type="text" 
             name="Nombre" 
             id="Nombre" 
@@ -317,7 +310,7 @@
     
         <div class="phone">
             <label for="Phone"></label>
-            <input class="form-control estilou" 
+            <input class="form-control estilou estiloWidth" 
             type="text" 
             inputmode="tel"
             name="Phone" 
@@ -379,7 +372,7 @@
 
         <div class="redes"><i class="gg-facebook reesaltado" ></i><i class="gg-adidas"></i><i class="gg-instagram"></i><i class="gg-google"></i></div>
 
-        <div><span>©&nbsp;</span><span class="copyright-year texto5">2023</span><span>&nbsp;</span><span>Pesto</span><span>.&nbsp;</span><span>All Rights Reserved</span></div>
+        <div class="fiiinal"><span>©&nbsp;</span><span class="copyright-year texto5">2023</span><span>&nbsp;</span><span>Pesto</span><span>.&nbsp;</span><span>All Rights Reserved</span></div>
     </div>
 
 </div>
