--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
@@ -323,6 +323,10 @@
     
     <div class="cajaFondo2">
         <div id="poster"></div>
+
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
     </div>
     
     <script src="app.js"></script>
