--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
@@ -183,9 +183,15 @@
 
     <div class="cajaFondo1">    
 
-        <div class="especialidades">
-            TOOLS 
-            <!-- <span class="material-symbols-outlined estilo">settings</span> -->
+        <div class="backBlack">
+
+            <!-- <div class="line"></div> -->
+
+            <div class="especialidades">
+                TOOLS 
+                <!-- <span class="material-symbols-outlined estilo">settings</span> -->
+            </div>
+
         </div>
 
         <div class="CajaFuera" id="CajaFuera">
