--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index.html
@@ -174,16 +174,16 @@
         </div>
 
         <div class="icono">
-            <a href="#CajaFuera"><span class="material-symbols-outlined style_icon">expand_more</span></a>
+            <a href="#backBlack"><span class="material-symbols-outlined style_icon">expand_more</span></a>
         </div>
 
     </div>
    
 
 
-    <div class="cajaFondo1">    
+    <div class="cajaFondo1" id="cajaFondo1">    
 
-        <div class="backBlack">
+        <div class="backBlack" id="backBlack">
 
             <!-- <div class="line"></div> -->
 
