--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index2.html
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/index2.html
@@ -205,7 +205,7 @@
                 </div>
         
                 <div class="box">
-                    <img src="img2/CasaPapel.jpg" alt="">   
+                    <img src="img2/collage.jpg" alt="">   
                 </div>
     
                 <div class="box">
@@ -254,8 +254,9 @@
 
             <div class="info">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odit accusamus necessitatibus ad expedita possimus perspiciatis doloribus adipisci incidunt iusto. Pariatur optio aliquid ut animi provident incidunt asperiores repudiandae molestias.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odit accusamus necessitatibus ad expedita possimus perspiciatis doloribus adipisci incidunt iusto. Pariatur optio aliquid ut animi provident incidunt asperiores repudiandae molestias.</p>
+                <p class="p1">MARKETING CAMPAIGN FOR THE BRAND "VOSS"
+                </p>    
+                <p class="p2">This personal project was born from the idea of redesigning the brand's old campaigns and giving it a fresh touch. That's why I created a montage with an image of a glass bottle, a bright sunset located inside, and as a background, a postcard of the Atlantic Ocean, all of them used as key elements to elaborate the final art for the campaign's publication.</p>
 
             </div>
 
